fix pop up z-index

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,7 @@
   position: absolute;
   background: #f0f8ff;
 
+  z-index: 10;
   top: 2em;
   left: 2em;
   display: flex;
